--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -6,8 +6,7 @@ import AboutContent from "../../content/other/about.typ?html&body";
 
 <Layout
   id={false}
-  title="About me"
-  description="Things about Myriad-Dreamin"
+  title="Introduction"
   date={new Date("April 25 2025")}
 >
   <AboutContent />
