--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -64,7 +64,7 @@ const recent5Posts = posts.slice(0, 5);
         <AboutContent />
       </section>
       <section aria-label="Recent Posts">
-        <h2>Recent Posts</h2>
+        <!-- <h2>Recent Posts</h2> -->
         <ul class="accent block-list posts">
           {
             recent5Posts.map((post) => (
