--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -5,9 +5,9 @@ const today = new Date();
 ---
 
 <footer>
-  &copy; 2023-{today.getFullYear()} Myriad-Dreamin. All rights reserved.
+  &copy; 2023-{today.getFullYear()} Lehan Zhang. All rights reserved.
   <div class="social-links">
-    <a class="icon" href="https://github.com/Myriad-Dreamin" target="_blank">
+    <a class="icon" href="https://github.com/Cattie33" target="_blank">
       <span class="sr-only">Go to My GitHub's Profile</span>
       <svg viewBox="0 0 16 16" aria-hidden="true"
         ><path
